Fix mobile wrapping of config values

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -326,7 +326,7 @@ details summary {
 dt {
   float: left;
   clear: left;
-  width: 12em;
+  width: 10em;
   &::after {
     content: ':';
   }
